gcc/testsuite/rust/compile/issue-4267.rs
#[cfg(a,a)]
// { dg-error "multiple .cfg. predicates are specified" "" { target *-*-* } .-1 }
fn a(){}
